--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -76,20 +76,23 @@ html, body {
     #main {
         position: relative;
         overflow: auto;
-        overflow-x: hidden;
-        /* border: 1px solid red; */
+        /* overflow-x: hidden; */
+        border: 1px solid red;
         background: #2f2f2f;
         border-radius: 5px;
         padding: 10px;
         width: 100%;
-        height: 100%;
+        /* height: 95%; */
+        /* flex: 1; */
+    }
+
+    #main::-webkit-scrollbar {
+        width: 0.5em; /* Set the width of the scrollbar */
     }
 
     #main a {
         color: var(--white);
     }
-
-
 
     .active {
         border-radius: 5px;
@@ -354,7 +357,7 @@ html, body {
     position: relative;
     display: flex;
     width: 100%;
-    height: 110%;
+    height: 100%;
     /* border:1px solid red; */
 }
 
@@ -404,7 +407,6 @@ progress::-webkit-progress-bar {
     color: #cfcfcf;
     opacity: 0;
     transition: opacity 0.5s;
-
 }
 
 .card .img {
@@ -415,6 +417,10 @@ progress::-webkit-progress-bar {
     filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.4));
     text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
     width: 48px;
+}
+
+.bi {
+    filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.9));
 }
 
 /* Handle Icon Scaling */
