--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -77,7 +77,7 @@ html, body {
         position: relative;
         overflow: auto;
         /* overflow-x: hidden; */
-        border: 1px solid red;
+        /* border: 1px solid red; */
         background: #2f2f2f;
         border-radius: 5px;
         padding: 10px;
@@ -354,10 +354,10 @@ html, body {
 }
 
 .container {
-    position: relative;
+    position: absolute;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 95%;
     /* border:1px solid red; */
 }
 
