--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -67,17 +67,21 @@
         padding: 5px;
     }
 
+    #minibar .active {
+        font-weight: bold;
+        color: var(--wh);
+    }
+
     #minibar .item  {
         cursor: pointer;
         padding-bottom: 5px;
     }
 
-    /* #sidebar { */
-        /* background: #252525;
-        padding: 15px;
-        width: 325px;
-        height: 100% */
-    /* } */
+    .sidebar_container {
+        width: 100%;
+        height: 100%;
+        border: 1px solid red;
+    }
 
     #sidebar .header {
         color: var(--lightblue);
@@ -105,6 +109,38 @@
 
     #sidebar a:hover {
         text-decoration: underline;
+    }
+
+    .search_view {
+        /* padding: 5px; */
+        height: 95%;
+    }
+
+    .search_results {
+        background: var(--moredark);
+        margin-top: 10px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 100%;
+    }
+
+    .search_results .icon16 {
+        padding-right: 10px;
+    }
+
+    .search_results .item {
+        display: flex;
+        font-weight: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .search_results::-webkit-scrollbar {
+        width: 0.5em;
+    }
+
+    .search .input {
+
     }
 
 /* } */
