--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,10 +16,14 @@ html, body {
 
     #header_menu {
         display: flex;
-        background: #252525;
+        background: var(--menu);
         padding: 5px;
         width: 100%;
         /* height: 16px; */
+    }
+
+    #header_menu .slider {
+        height: 12px;
     }
 
     #header_menu .item {
@@ -41,7 +45,7 @@ html, body {
 
     #navigation_menu {
         display: flex;
-        background: #252525;
+        background: var(--menu);
         padding: 5px;
         width: 100%;
         /* height: 16px; */
@@ -51,7 +55,7 @@ html, body {
         border-radius: 5px;
         border: none;
         color: #cfcfcf;
-        background: var(--lessdark);
+        background: var(--input);
         font-size: 12px;
         height: 18px;
         width: 100%;
@@ -76,18 +80,23 @@ html, body {
     #main {
         position: relative;
         overflow: auto;
-        /* overflow-x: hidden; */
+        overflow-x: hidden;
         /* border: 1px solid red; */
-        background: #2f2f2f;
+        background: var(--main);
         border-radius: 5px;
         padding: 10px;
         width: 100%;
-        /* height: 95%; */
+        height: 90%;
         /* flex: 1; */
     }
 
     #main::-webkit-scrollbar {
-        width: 0.5em; /* Set the width of the scrollbar */
+        background: var(--lessdark);
+        width: 0px;
+    }
+
+    #main::-webkit-scrollbar-track {
+        background: var(--lessdark);
     }
 
     #main a {
@@ -102,7 +111,7 @@ html, body {
 
     #msg {
         color: var(--orange);
-        background-color: var(--dark);
+        background-color: var(--msg);
         border-radius: 5px;
         padding: 10px;
         z-index: 100;
@@ -353,12 +362,19 @@ html, body {
     /* border:1px solid red; */
 }
 
+.wrapper {
+    overflow: hidden;
+    box-sizing: border-box;
+    /* border:1px solid green; */
+    height: 100% !important;
+    background:var(--lessdark);
+}
+
 .container {
-    position: absolute;
     display: flex;
     width: 100%;
-    height: 95%;
-    /* border:1px solid red; */
+    height: 100%;
+
 }
 
 .container:focus {
@@ -417,6 +433,10 @@ progress::-webkit-progress-bar {
     filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.4));
     text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
     width: 48px;
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 .bi {
@@ -672,6 +692,11 @@ input[type=text]:focus {
     margin-bottom: 5px;
 }
 
+.float.right {
+    float:right;
+    padding: 5px;
+}
+
 /* for some reason this configuration works */
 .bottom .left {
     left: -50%;
@@ -680,7 +705,7 @@ input[type=text]:focus {
 .right  {
     margin-left: auto;
     /* margin-right: 25px; */
-    right: 25px;
+    /* right: 25px; */
 }
 
 .warning {
@@ -764,9 +789,18 @@ input[type=text]:focus {
 }
 
 :root {
-    --dark: #252525;
-    --moredark: #222222;
-    --lessdark: #2f2f2f;
+    --menu: #303134;
+    --sidebar: #262626;
+    --input: #484848;
+    --main: #2c2c2c;
+    --minibar: #222222;
+    --border: #696969;
+    --msg: #222222;
+    --dialog: #262626;
+
+    /* --dark: #252525; */
+    /* --moredark: #222222; */
+    /* --lessdark: #2f2f2f; */
     --black: #000000;
     --white: #FFFFFF;
     --warning: #960000;
@@ -777,6 +811,8 @@ input[type=text]:focus {
     --orange: #FFA500;
     --link: #4183c4;
     --highlight: #334c74;
+
+    --grey: #505050;
 
     --light: #C0C0C0;
     --lighter: #cfcfcf;
