--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -423,21 +423,25 @@ html, body {
 }
 
 .tab {
-    /* margin: 0; */
     border-radius: 5px 5px 0px 0px;
     background: var(--main);
     color: var(--orange);
     border: 1px solid var(--border);
     border-left: 1px solid transparent;
-    /* border-bottom: 1px solid transparent; */
-    padding: 4px;
-    padding-left: 15px;
-    padding-right: 15px;
     display: inline-block;
 }
 
-.tab:hover {
+.tab .label {
+    padding-left: 5px;
+}
 
+.tab_close {
+    text-align: center;
+    margin-left: auto;
+    right: 0;
+}
+
+.tab:hover {
     cursor: pointer;
 }
 
@@ -446,9 +450,13 @@ html, body {
     border-bottom: none;
 }
 
+.tab_container {
+    padding:4px;
+    width: 100%;
+}
+
 .tab_content {
-    padding: 5px;
-    /* overflow: auto; */
+    padding: 10px;
 }
 
 #chart {
@@ -570,11 +578,6 @@ progress::-webkit-progress-bar {
     margin-left: 10px;
     width: 100%;
     /* line-height: 14px; */
-}
-
-.card:hover {
-    /* background: #334c74; */
-    /* background: var(--highlight) */
 }
 
 .card a {
@@ -762,23 +765,23 @@ input[type=text]:focus {
 }
 
 .highlight {
-    background: #334c74;
+    background: var(--highlight);
 }
 
 .highlight_select {
     border-radius: 5px;
-    background: #334c74;
+    background: var(--highlight-select);
 }
 
 .highlight_target {
     box-sizing: border-box;
     /* border: 1px solid var(--orange); */
     border-radius: 5px;
-    background: #334c74;
+    background: var(--highlight-select);
 }
 
 .ds-selected {
-    background: #334c74;
+    background: var(--highlight-select);
 }
 
 .drag_select {
@@ -803,6 +806,10 @@ input[type=text]:focus {
 .float.right {
     float:right;
     padding: 5px;
+}
+
+.flex {
+    display: flex;
 }
 
 /* for some reason this configuration works */
@@ -935,7 +942,11 @@ input[type=text]:focus {
     --yellow: #FFFF00;
     --orange: #FFA500;
     --link: #4183c4;
-    --highlight: #334c74;
+    --highlight: #364864;
+    --highlight-select: #364864;
+    /* --highlight-select: #334c74; */
+    /* --highlight: rgba(0, 128, 255, 0.213); */
+    /* --highlight: linear-gradient(to right, #505050, #252525); */
 
     --grey: #505050;
 
