--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -48,6 +48,10 @@
         height: 100%;
     }
 
+    .sb_view .item.active {
+        background: var(--highlight)
+    }
+
     .properties_view {
         overflow: auto;
         height: 100%;
@@ -59,8 +63,8 @@
     .properties {
         width: 100%;
         border-radius: 5px;
-        background: var(--main);
-        border-bottom: 1px solid var(--main);
+        /* background: var(--main); */
+        /* border-bottom: 1px solid var(--main); */
         margin-bottom: 10px;
         padding: 5px;
         box-sizing: border-box;
